src/test/ui/proc-macro/issue-50493.stderr
error[E0742]: visibilities can only be restricted to ancestor modules
  --> $DIR/issue-50493.rs:8:12
   |
LL |     pub(in restricted) field: usize,
   |            ^^^^^^^^^^

error[E0616]: field `field` of struct `Restricted` is private
  --> $DIR/issue-50493.rs:6:10
   |
LL | #[derive(Derive)]
   |          ^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0616, E0742.
For more information about an error, try `rustc --explain E0616`.
